# WaveGC

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  api.py  cli.py
src/graph/graphgps/: agg_runs.py
src/node/configs/: omnipath.yaml  string.yaml
src/node/graphgps/: logger.py
src/node/graphgps/config/: defaults_config.py
src/node/graphgps/loader/: master_loader.py
src/node/graphgps/loader/dataset/: omnipath.py  string_db.py
src/node/graphgps/train/: custom_train.py
src/node/graphgps/transform/: transforms.py
